test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/target-context/resources.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: target
data:
  content: target
