test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/target-context/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: update-targets
status:
  conditions:
    - reason: Succeeded
      status: "True"
      type: Ready
