test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/target-context/resources-assert.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: target
data:
  content: trigger
  targetContent: target
