test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/target-context/01-resources.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resources
spec:
  timeouts: {}
  try:
  - apply:
      file: resources.yaml
