test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/target-context/04-verify.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: verify
spec:
  timeouts: {}
  try:
  - assert:
      file: resources-assert.yaml
