test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/target-context/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: target-context
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: resources.yaml
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: update-targets
  - name: step-03
    try:
    - apply:
        file: trigger.yaml
  - name: step-04
    try:
    - assert:
        file: resources-assert.yaml
